# ripper

./: .flake8  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  auth.py  data_fetcher.py  database.py  main.py  poetry.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  start_ripper.bat  test_auth.py  test_data_fetcher.py  test_ui.py  test_widget_removal.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
.junie/: guidelines.md
.windsurf/rules/: code-style-guide.md  tooling.md  validating-changes.md
concept/examples/: guitest.py
concept/examples/consult-viewer/: blankview.py  dockutils.py  mainview.py  statuslog.py
concept/examples/consult-viewer/res/: images.qrc
concept/examples/dockwidgets/: dockwidgets.py
concept/examples/simple/: main.py
concept/examples/simple-pyqt6/: main.py
docs/: DASHBOARD_SYSTEM_STATUS.md  DOCUMENTATION_GAP_ANALYSIS.md  PROJECT_PURPOSE_AND_USAGE.md
res/images/: tools.py
ripper/: main.py
ripper/rippergui/: datasource_list_widget.py  fonts.py  globals.py  mainview.py  oauth_client_config_view.py  sheet_utils.py  sheets_selection_view.py  spreadsheet_thumbnail_widget.py  table_view.py
ripper/rippergui/dashboard/: README.md  __init__.py  __main__.py  services.py
ripper/rippergui/dashboard/models/: __init__.py  dashboard.py  data_source.py  financial_widgets.py  registry.py  tiller_data.py  widget_types.py  widgets.py
ripper/rippergui/dashboard/views/: dashboard_editor.py  dashboard_view.py  data_source_dialog.py  financial_dashboard.py  main_window.py
ripper/rippergui/widgets/: accordion_widget.py
ripper/ripperlib/: __init__.py  auth.py  database.py  defs.py  range_manager.py  sheet_data_cache.py  sheets_backend.py
rippergui/: __init__.py  globals.py  mainview.py  oauth_client_config_view.py  sheets_selection_view.py  table_view.py
ripperlib/: auth.py  database.py  main.py  sheets_backend.py
scripts/: README.md  find_qt_tests.py  pre-commit.bat  pre-commit.ps1  pre-commit.py  pre-commit.sh
src/: auth.py  data_fetcher.py  database.py  google_sheets_selector.py  main.py  notifications.py  sheets_backend.py  ui.py
src/widgets/: auth_view.py  google_sheets_selector.py  main_view.py  main_window.py  mainview.py  transaction_table.py
test/: README.md  __init__.py  conftest.py  test_main.py  test_utils.py
test/ripper/: test_main.py
test/ripper/rippergui/: test_datasource_list_widget.py  test_fonts.py  test_mainview.py  test_oauth_client_config_view.py  test_sheet_utils.py  test_sheets_selection_view.py  test_spreadsheet_thumbnail_widget.py  test_table_view.py
test/ripper/rippergui/dashboard/: test_dashboard_editor.py  test_dashboard_models.py  test_dashboard_services.py  test_dashboard_view.py  test_financial_widgets.py  test_tiller_and_datasource.py  test_widget_registry.py
test/ripper/rippergui/widgets/: __init__.py  test_accordion_widget.py
test/ripper/ripperlib/: test_auth.py  test_database.py  test_database_caching.py  test_defs.py  test_range_manager.py  test_sheet_data_cache.py  test_sheet_data_cache_fixed.py  test_sheets_backend.py
test/rippergui/: test_table_view.py
test/ripperlib/: test_auth.py  test_database.py  test_main.py  test_sheets_backend.py
tests/: test_auth.py  test_data_fetcher.py  test_sheets_backend.py  test_ui.py
