[project]
name = "ripper"
version = "0.1.0"
description = "ripper"
author = "Rob L <solarisin@gmail.com>"
readme = "README.md"
license = "MIT"
repository = "https://github.com/solarisin/ripper"
homepage = "https://github.com/solarisin/ripper"
dynamic = ["requires-python", "dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.7.0"
google-auth = "^2.39.0"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.168.0"
keyring = "^25.0.1"
requests = "^2.32.3"
pytest = "^8.3.5"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-qt = "^4.4.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
isort = "^6.0.1"
types-requests = "^2.32.0.20250515"
mypy = "^1.15.0"
monkeytype = "^23.3.0"
beartype = "^0.20.2"
typing-extensions = "^4.13.2"
types-toml = "^0.10.8.20240310"
google-auth-stubs = "^0.3.0"
google-api-python-client-stubs = "^1.29.0"
types-oauthlib = "^3.2.0.20250516"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
markers = ["qt: mark test as Qt-specific"]
addopts = ["--cov=rippergui", "--cov=ripperlib", "--cov-report=xml", "--strict-markers"]

[tool.flake8]
extend-ignore = ["E203"]
extend-exclude = [".git",  "__pycache__", "concept/", ".venv/", "res/"]
max-complexity = 10
max-line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    'test/',  # Temporarily exclude tests until we add type hints to main code
]
