[project]
name = "ripper"
version = "0.1.0"
description = "ripper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyside6>=6.11.0,<7.0.0",
    "google-auth>=2.39.0,<3.0.0",
    "google-auth-oauthlib>=1.2.2,<2.0.0",
    "google-auth-httplib2>=0.2.0,<0.3.0",
    "google-api-python-client>=2.168.0,<3.0.0",
    "keyring>=25.0.1,<26.0.0",
    "requests>=2.32.4,<3.0.0",
    "toml>=0.10.2,<0.11.0",
    "click>=8.2.0,<9.0.0",
    "loguru>=0.7.3,<0.8.0",
    "platformdirs>=4.9.6,<5.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pyside6-qtads>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-qt>=4.4.0,<5.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "pytest-mock>=3.14.1,<4.0.0",
    "ruff>=0.15.12,<0.16.0",
    "types-requests>=2.32.0.20250515,<3.0.0",
    "mypy>=1.15.0,<2.0.0",
    "beartype>=0.20.2,<0.21.0",
    "typing-extensions>=4.13.2,<5.0.0",
    "types-toml>=0.10.8.20240310,<0.11.0",
    "google-auth-stubs>=0.3.0,<0.4.0",
    "google-api-python-client-stubs>=1.29.0,<2.0.0",
    "types-oauthlib>=3.2.0.20250516,<4.0.0",
    "pytest-beartype>=0.2.0,<0.3.0",
    "hypothesis>=6.132.0,<7.0.0",
    "pandas-stubs>=2.2.3.250527,<3.0.0",
]

[tool.uv]
# Application, not a distributable library: do not build/install the project itself.
# Deps are installed into the venv; `ripper` is imported via pytest's pythonpath = ["."].
package = false
# Security floors for transitive dependencies (resolves Dependabot alerts). Each is pulled
# in indirectly (cryptography/urllib3/idna via google-auth/requests); these constraints keep
# the resolver from selecting a vulnerable version even if a parent would otherwise allow it.
constraint-dependencies = [
    "cryptography>=48.0.1",
    "urllib3>=2.7.0",
    "idna>=3.15",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["concept", "res"]

[tool.ruff.lint]
# E/F/W/I replace flake8 + isort; C90 replaces flake8's mccabe complexity gate.
select = ["E", "F", "W", "I", "C90"]
# E203 (whitespace before ':') conflicts with the formatter; keep it disabled as flake8 did.
ignore = ["E203"]
mccabe.max-complexity = 10

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
markers = ["qt: mark test as Qt-specific"]
# Coverage is invoked explicitly in CI (see ci.yml) so focused local runs stay fast.
# beartype enforces runtime type checking across the whole package since mypy is static-only.
addopts = ["--strict-markers", "--import-mode=importlib", "--beartype-packages=ripper"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
# warn_unused_ignores is intentionally off: it is fragile across the 3.11-3.13 CI
# matrix and differing third-party stub versions (PySide6/google-*), where a needed
# `# type: ignore` on one combination reads as unused on another.
warn_unused_ignores = false
files = ["ripper"]
